--- a/Views/Event/Add.cshtml
+++ b/Views/Event/Add.cshtml
@@ -37,7 +37,7 @@
 
             <div class="mb-2">
                 <label asp-for="@Model.ImageUrl" class="form-label-add-edit">Image URL</label>
-                <input asp-for="@Model.ImageUrl" class="form-control" aria-required="false" placeholder="Enter image URL (optional)" />
+                <input asp-for="@Model.ImageUrl" class="form-control" aria-required="false" placeholder="Enter image URL" />
                 <span asp-validation-for="@Model.ImageUrl" class="text-danger"></span>
             </div>
 
