--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,6 +5,10 @@
 <div class="container mt-5 welcome-section">
     <div class="row justify-content-center">
         <div class="col-md-8 col-sm-10 text-center">
+            <img src="~/images/logo.png"
+                 alt="Welcome to Men Of Varna"
+                 class="img-fluid mb-4"
+                 style="border-radius: 10px; max-width: 35%; height: auto;">
             <h1 class="display-4">Welcome to Men Of Varna</h1>
             <p class="lead">Join the brotherhood and be part of the movement to being greater man!</p>
             <a href="/Identity/Account/Register" class="btn btn-primary btn-lg mt-3">Start Your Adventure</a>
