--- a/Areas/Admin/Views/Home/Index.cshtml
+++ b/Areas/Admin/Views/Home/Index.cshtml
@@ -5,6 +5,7 @@
     </div>
 
     <div class="row g-4">
+
         <div class="col-md-4">
             <div class="card shadow h-100 border-0">
                 <div class="card-body d-flex flex-column align-items-center text-center">
@@ -17,6 +18,7 @@
                 </div>
             </div>
         </div>
+
 
         <div class="col-md-4">
             <div class="card shadow h-100 border-0">
@@ -31,6 +33,18 @@
             </div>
         </div>
 
-        
+
+        <div class="col-md-4">
+            <div class="card shadow h-100 border-0">
+                <div class="card-body d-flex flex-column align-items-center text-center">
+                    <i class="fa-solid fa-comments fa-3x text-success mb-3"></i>
+                    <h5 class="card-title">Manage Feedbacks</h5>
+                    <p class="card-text text-muted">View, and manage feedback submitted by users.</p>
+                    <a asp-area="Admin" asp-controller="FeedbackManagement" asp-action="Index" class="btn btn-success mt-auto w-100">
+                        Go to Feedbacks
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
